# universal-mcp-gateway

./: .gitignore  ARCHITECTURE_DIAGRAM.md  BUILD_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  CREATE_GITHUB_RELEASE.md  Cargo.toml  Dockerfile  GETTING_STARTED.md  LAUNCH_CHECKLIST.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  PUBLISH_SUCCESS.md  README.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  docker-compose.yml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: adapters.md  api-reference.md  architecture.md  deployment.md  quickstart.md  security.md
examples/: config.yaml  rust-custom-adapter.rs  typescript-usage.ts
gateway-core/: Cargo.toml
gateway-core/src/: api.rs  auth.rs  config.rs  gateway.rs  main.rs  protocol.rs  sandbox.rs
gateway-core/src/adapters/: cli.rs  factory.rs  mod.rs  openapi.rs  postgresql.rs  registry.rs
sdk/: .eslintrc.json  README.md  jest.config.js  package-lock.json  package.json
sdk/src/: client.test.ts  client.ts  errors.ts  index.ts  types.ts
